<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Message Monster</string>
    <string name="title_section1">Inbox</string>
    <string name="title_section2">Friends</string>
    <string name="title_section3">Section 3</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="hello_world">Hello world!</string>
    <string name="usernameHint">Username</string>
    <string name="passwordHint">Password</string>
    <string name="login_button_label">SIGN IN</string>
    <string name="sign_up_text">SIGN UP!</string>
    <string name="menu_logout_label">Logout</string>
    <string name="menu_edit_friends_label">Edit Friends</string>
    <string name="title_activity_sign_up">SignUpActivity</string>
    <string name="email_hint">Email</string>
    <string name="empty_inbox_label">no new messages</string>
    <string name="empty_friends_label">Add friends to begin.</string>
    <string name="sign_up_button">REGISTER</string>
    <string name="email_sent">An email was successfully sent with reset instructions.</string>
    <string name="success_title">Success!</string>
    <string name="sign_up_error_message">Please make sure you enter a username, password, and email.</string>
    <string name="retrieve_password_error_message">Please make sure you enter your email.</string>
    <string name="sign_up_error_title">Oops!</string>
    <string name="login_error_message">Please make sure you enter a username and password.</string>
    <string name="forgot_password">Forgot your password?</string>
    <string name="title_activity_retrieve_password">RetrievePassword</string>
    <string name="retrieve_password_label">RETRIEVE PASSWORD</string>
    <string name="title_activity_edit_friends">Edit Friends</string>
    <string name="error_title">We\'re sorry.</string>
    <string name="menu_camera_label">Camera</string>
    <string name="general_error">Sorry, there was an error!</string>
    <string name="video_file_size_warning">Selected video must be less than 10MB</string>
    <string name="file_not_found_error">There was a problem with the selected file.</string>
    <string name="error_file_length">This file size is too long.</string>

    <string-array name="camera_choices">
        <item>Take Picture</item>
        <item>Take Video</item>
        <item>Choose Picture</item>
        <item>Choose Video</item>
    </string-array>

    <string name="title_activity_recipients">Choose Recipients</string>
    <string name="empty_recipients_list_message">Choose some friends first!</string>
    <string name="error_selecting_file">There was an error with the file selected. Please select a different file</string>
    <string name="error_selecting_file_title">We\'re sorry!</string>
    <string name="success_message">Message sent!</string>
    <string name="error_sending_message">There was an error sending your message.  Please try again.</string>
    <string name="uploading_message">Uploading message...</string>
    <string name="error_connecting_with_parse">There was a problem sending your message.  Please try again.</string>
    <string name="title_activity_view_image">Message Monster</string>
    <string name="background_description">background gradient color ocean blue</string>
    <string name="cancel_button_label">CANCEL</string>
    <string name="content_description_user_avatar">User Avatar</string>
    <string name="content_description_user_checkmark">check mark for selected users</string>
    <string name="push_message">You have a new Krakkensnap message from %s!</string>

</resources>
